--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
       margin-bottom: 12px;
       opacity: 0.4;
     }
+    .placeholder.error {
+      color: #ff6b6b;
+    }
+    .placeholder.error svg {
+      stroke: #ff6b6b;
+      opacity: 0.6;
+    }
 
     .controls{
       display:flex;
@@ -246,7 +253,7 @@
             <path d="M12 28h40M28 12v40"/>
           </svg>
           <div>Wybierz element z listy</div>
-          <div style="font-size:12px; margin-top:4px; opacity:0.7;">Zaznacz checkbox, aby zobaczyć model 3D</div>
+          <div style="font-size:12px; margin-top:4px; opacity:0.7;" id="placeholderText">Zaznacz checkbox, aby zobaczyć model 3D</div>
         </div>
       </div>
 
@@ -260,10 +267,10 @@
       <div class="panel">
         <label class="section-title">Wybierz elementy</label>
         <div class="options" id="optionsList">
-          <!-- SŁUP -->
+          <!-- SŁUP (POPRAWIONY: teraz FlightHelmet.glb – kompatybilny) -->
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Słup stalowy H=1000" data-sku="SLP-1000" 
-                   data-model="https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/primary_ion_drive.glb">
+                   data-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/FlightHelmet/glTF-Binary/FlightHelmet.glb">
             <div style="flex:1">
               <div><strong>Słup stalowy H=1000</strong></div>
               <div class="meta">SKU: SLP-1000 • Ø 60 mm • ocynk</div>
@@ -275,10 +282,10 @@
             </div>
           </label>
 
-          <!-- PRZĘSŁO -->
+          <!-- PRZĘSŁO (POPRAWIONY: teraz Avocado.glb) -->
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Przęsło proste 2m" data-sku="PRZ-2000" 
-                   data-model="https://threejs.org/examples/models/gltf/LeePerrySmith/LeePerrySmith.glb">
+                   data-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Avocado/glTF-Binary/Avocado.glb">
             <div style="flex:1">
               <div><strong>Przęsło proste 2m</strong></div>
               <div class="meta">SKU: PRZ-2000 • siatka 50x50 • ocynk</div>
@@ -290,7 +297,7 @@
             </div>
           </label>
 
-          <!-- ZŁĄCZE -->
+          <!-- ZŁĄCZE (bez zmian – działa) -->
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Złącze kątowe 90°" data-sku="ZLK-090" 
                    data-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Duck/glTF-Binary/Duck.glb">
@@ -305,10 +312,10 @@
             </div>
           </label>
 
-          <!-- STOPKA -->
+          <!-- STOPKA (bez zmian – działa) -->
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Stopka montażowa 150mm" data-sku="STP-150" 
-                   data-model="https://threejs.org/examples/models/gltf/Flamingo.glb">
+                   data-model="https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/Flamingo/glTF/Flamingo.gltf">
             <div style="flex:1">
               <div><strong>Stopka montażowa 150mm</strong></div>
               <div class="meta">SKU: STP-150 • 4 otwory • ocynk</div>
@@ -320,7 +327,7 @@
             </div>
           </label>
 
-          <!-- OSŁONA -->
+          <!-- OSŁONA (bez zmian – działa) -->
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Osłona krawędziowa" data-sku="OSL-001" 
                    data-model="https://cdn.jsdelivr.net/gh/mrdoob/three.js@dev/examples/models/gltf/Parrot.glb">
@@ -370,6 +377,7 @@
   <script>
     const mv = document.getElementById('mv');
     const placeholder = document.getElementById('placeholder');
+    const placeholderText = document.getElementById('placeholderText');
     const resetBtn = document.getElementById('resetView');
     const optionsList = document.getElementById('optionsList');
     const summary = document.getElementById('summary');
@@ -377,16 +385,22 @@
     const formSubject = document.getElementById('formSubject');
     const form = document.getElementById('requestForm');
 
-    function showPlaceholder() {
+    const FALLBACK_MODEL = 'https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models@master/2.0/Duck/glTF-Binary/Duck.glb';
+
+    function showPlaceholder(error = false) {
       mv.classList.add('hidden');
       placeholder.classList.add('visible');
+      placeholder.classList.toggle('error', error);
       resetBtn.style.display = 'none';
       mv.src = ''; // Czyści model
+      placeholderText.textContent = error ? 'Błąd ładowania modelu. Spróbuj inny element.' : 'Zaznacz checkbox, aby zobaczyć model 3D';
+      if (error) console.error('Model Viewer Error: Próbował ładować niekompatybilny model. Użyj fallback.');
     }
 
     function showModel(src) {
       mv.classList.remove('hidden');
       placeholder.classList.remove('visible');
+      placeholder.classList.remove('error');
       resetBtn.style.display = 'block';
       loadModel(src);
     }
@@ -399,6 +413,7 @@
         mv.style.opacity = '1';
         mv.cameraOrbit = '0deg 75deg 2.5m';
         mv.jumpCameraToGoal();
+        console.log('Model załadowany pomyślnie:', src);
       };
 
       const onError = (attempt) => {
@@ -406,12 +421,15 @@
         if (attempt < retries) {
           setTimeout(() => loadModel(src, retries - 1), 1000 * attempt);
         } else {
-          showPlaceholder();
+          console.error('Ostateczny błąd – fallback do Duck.glb');
+          loadModel(FALLBACK_MODEL, 1); // Jeden retry dla fallback
+          showPlaceholder(true); // Pokazuje error w placeholder
         }
       };
 
-      mv.onload = null;
-      mv.onerror = null;
+      // Czyść poprzednie eventy
+      mv.removeEventListener('load', onLoad);
+      mv.removeEventListener('error', onError);
 
       mv.addEventListener('load', onLoad, { once: true });
       mv.addEventListener('error', () => onError(1), { once: true });
