--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
       <div class="panel">
         <label class="section-title">Wybierz elementy</label>
         <div class="options" id="optionsList">
-          <!-- SŁUP – DZIAŁA 100% -->
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Słup stalowy H=1000" data-sku="SLP-1000" 
                    data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/FlightHelmet/glTF-Binary/FlightHelmet.glb">
@@ -84,7 +83,6 @@
               <span class="qty-unit">szt.</span>
             </div>
           </label>
-          <!-- POZOSTAŁE -->
           <label class="option">
             <input type="checkbox" class="item-check" data-name="Przęsło proste 2m" data-sku="PRZ-2000" 
                    data-model="https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Avocado/glTF-Binary/Avocado.glb">
@@ -119,7 +117,7 @@
           <input type="hidden" name="_next" value="https://provercel.vercel.app/">
           <input type="hidden" name="_subject" id="formSubject" value="Zapytanie z Provercel - 3D">
           <label class="small">Firma / Imię</label>
-          <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" />
+          <input type="text" name="client_name" placeholder="Nazwa firmy lub imię" required />
           <label class="small">Adres e-mail</label>
           <input type="email" name="client_email" placeholder="twoj@proton.me" required />
           <label class="small">Uwagi</label>
@@ -142,12 +140,25 @@
     const formSubject = document.getElementById('formSubject');
 
     function showPlaceholder() {
-      mv.classList.add('hidden'); placeholder.classList.add('visible'); resetBtn.style.display = 'none'; mv.src = '';
+      mv.classList.add('hidden');
+      placeholder.classList.add('visible');
+      resetBtn.style.display = 'none';
+      mv.removeAttribute('src');
     }
+
     function showModel(src) {
-      mv.classList.remove('hidden'); placeholder.classList.remove('visible'); resetBtn.style.display = 'block';
-      mv.src = src; mv.style.opacity = '0.5';
-      mv.onload = () => { mv.style.opacity = '1'; mv.cameraOrbit = '0deg 75deg 2.5m'; mv.jumpCameraToGoal(); };
+      mv.classList.remove('hidden');
+      placeholder.classList.remove('visible');
+      resetBtn.style.display = 'block';
+      mv.style.opacity = '0.5';
+      mv.removeAttribute('src');
+      mv.src = src + '?t=' + Date.now(); // zapobiega cache
+
+      mv.addEventListener('load', () => {
+        mv.style.opacity = '1';
+        mv.cameraOrbit = '0deg 75deg 2.5m';
+        mv.jumpCameraToGoal();
+      }, { once: true });
     }
 
     optionsList.addEventListener('change', e => {
@@ -178,9 +189,24 @@
       formSubject.value = total ? `Zapytanie z Provercel - 3D (${total} szt.)` : 'Zapytanie z Provercel - 3D';
     }
 
-    document.getElementById('resetView').onclick = () => { mv.cameraOrbit = '0deg 75deg 2.5m'; mv.jumpCameraToGoal(); };
-    optionsList.addEventListener('input', e => { if (e.target.classList.contains('qty')) { let v = parseInt(e.target.value); if (isNaN(v)||v<1) e.target.value=1; if (v>999) e.target.value=999; updateSummary(); }});
-    window.onload = () => { showPlaceholder(); updateSummary(); };
+    document.getElementById('resetView').onclick = () => {
+      mv.cameraOrbit = '0deg 75deg 2.5m';
+      mv.jumpCameraToGoal();
+    };
+
+    optionsList.addEventListener('input', e => {
+      if (e.target.classList.contains('qty')) {
+        let v = parseInt(e.target.value);
+        if (isNaN(v) || v < 1) e.target.value = 1;
+        if (v > 999) e.target.value = 999;
+        updateSummary();
+      }
+    });
+
+    window.onload = () => {
+      showPlaceholder();
+      updateSummary();
+    };
   </script>
 </body>
 </html>
